--- a/less/main/mixins.less
+++ b/less/main/mixins.less
@@ -358,7 +358,7 @@
 	background: transparent;
 	font-size: @font__p--font-size;
 	line-height: 1.2em;
-	color: @font__p--text;
+	color: @color__p--text;
 	letter-spacing: 0;
     text-transform: uppercase;
 
