--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -121,6 +121,10 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 				padding: 1em 2em;
 				text-align: center;
 			}
+
+			.edit & {
+				width: 90%;
+			}
 		}
 		
 		&--contact {
