--- a/less/widgets/twitter-feed.less
+++ b/less/widgets/twitter-feed.less
@@ -29,6 +29,18 @@
 	color: inherit;
 	.item--margin-size--2to1-cols();
 	.clearfix();
+
+	.style--light & {
+        border-color: fade(@contrast--light, 75%);
+    }
+
+    .style--accent & {
+        border-color: fade(@contrast--accent, 75%);
+    }
+
+    .style--dark & {
+        border-color: fade(@contrast--dark, 75%);
+    }
 	
     @media @mobile {
 		width: 100%;
@@ -101,6 +113,18 @@ a.twitter__account-link {
 	padding: 1em 1.5em;
 	line-height: 1.4em !important;
 	border-top: 1px solid @color-text--light;
+
+	.style--light & {
+        border-color: fade(@contrast--light, 75%);
+    }
+
+    .style--accent & {
+        border-color: fade(@contrast--accent, 75%);
+    }
+
+    .style--dark & {
+        border-color: fade(@contrast--dark, 75%);
+    }
 	
 	// Twitter link at the end.
 	
@@ -113,5 +137,17 @@ a.twitter__account-link {
 	.via, a {
 		color: fade(@color__p--text, 50%);
 		line-height: 1em;
+
+		.style--light & {
+	        color: fade(@contrast--light, 50%);
+	    }
+
+	    .style--accent & {
+	        color: fade(@contrast--accent, 50%);
+	    }
+
+	    .style--dark & {
+	        color: fade(@contrast--dark, 50%);
+	    }
 	}
 }
