--- a/less/widgets/widgets.less
+++ b/less/widgets/widgets.less
@@ -20,12 +20,15 @@ section.template {
 
 .template__content {
 	position: relative;
-	overflow: hidden;
+
+	body:not(.edit) & {
+		overflow: hidden;
+	}
 }
 
 .template__content,
 .template__content section {
-	> .widget {
+	> .widget:not([data-name="row"]) {
 		.widget-styles;
 		
 		&[data-name="content"] {
@@ -45,10 +48,20 @@ section.template {
 	}
 }
 
+.template__content .row__container .widget > * {
+	margin: 0 auto;
+	max-width: 940px;
+}
+
+.template__content .row--width-no-padding .row__container .widget > * {
+	max-width: none;
+}
+
 // Layout Width Widgets
 
 .template__content >,
-.template__content section > {
+.template__content section >,
+.template__content .row__container {
 	.widget[data-name="line"],
 	.widget[data-name="line"] {
 		padding-left: 0;
@@ -64,7 +77,8 @@ section.template {
 // Page Width Widgets
 
 .template__content >,
-.template__content section > {
+.template__content section >,
+.template__content .row__container {
 	.widget[data-name="gallery"],
 	.widget[data-widget-type="gallery"],
 	.widget[data-name="responsiveslideshow"],
@@ -75,6 +89,10 @@ section.template {
 	.widget[data-name="line"] {
 		padding: 0;
 		width: auto;
+
+		.widget-overlay {
+			max-width: none;
+		}
 		
 		> * {
 			max-width: none;
