--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -230,10 +230,10 @@
     padding: 0.75em 1em 0.75em 46px !important;
 	background-color: lighten(@color__container--background, 10%) !important;
     border: 1px solid darken(@color__container--background, 10%);
+    color: @color__p--text!important;
 	
 	&, h3, p {
 		.paragraph;
-		color: inherit;
 	}
 	
 	h3, p {
