#426 Remove all images in the folder structure that are not necessary

--- a/home.twig
+++ b/home.twig
@@ -17,21 +17,21 @@
 		{
 		  'imageHeight':'3000',
 		  'imageWidth':'2000',
-		  'url': asset('images/feature-image--1.jpg'),
+		  'url': asset('images/feature/feature-image--1.jpg'),
 		  'title':'Go beyond your limits.',
 		  'description': 'Travel to the ends of the earth.'
 		},
 		{
 		  'imageHeight':'3000',
 		  'imageWidth':'2000',
-		  'url': asset('images/feature-image--2.jpg'),
+		  'url': asset('images/feature/feature-image--2.jpg'),
 		  'title':'Brave new paths.',
 		  'description': 'Enjoy the freedom of going anywhere.'
 		},
 		{
 		  'imageHeight':'3000',
 		  'imageWidth':'2000',
-		  'url': asset('images/feature-image--3.jpg'),
+		  'url': asset('images/feature/feature-image--3.jpg'),
 		  'title':'Never lose your grip.',
 		  'description': 'Fearlessly traverse the ice and snow.'
 		}
