--- a/layout.twig
+++ b/layout.twig
@@ -5,19 +5,19 @@
 		<title>{{ page.title }}</title>
 		<meta name="keywords" content="{{ page.keywords }}" />
 		<meta name="description" content="{{ page.description }}" />
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 
 		{% if site.favicon %}
 			<link rel="icon" href="{{ site.favicon['favicon'] }}" type="image/x-icon" />
 			<link rel="SHORTCUT ICON" href="{{ site.favicon['thumbnail'] }}?v={{ "now"|date("U") }}" type="image/x-icon" />
 		{% endif %}
-		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 		{% include basekit.headScript %}
 	</head>
 
 	<body class="{{ page.backgroundClass }}">
 		{% block content %}{% endblock %}
-		
 	    {% include basekit.bodyScript %}
 
 		<!-- jQuery -->
