--- a/less/widgets/twitter-feed.less
+++ b/less/widgets/twitter-feed.less
@@ -45,14 +45,14 @@
 .twitter__avatar {
 	position: static;
 	margin: 0.5em auto 1em;
-	width: 72px;
+	width: 48px;
 	text-align: center;
 }
 
 .twitter__avatar-image {
 	display: block;
-	width: @font__p--line-height*2;
-	height: @font__p--line-height*2;
+	width: 48px;
+	height: 48px;
 }
 
 // Account Link
