--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -19,6 +19,10 @@
 	min-height: 3em;
     .clearfix();
 
+	.userregistration & {
+		display: none;
+	}
+
     // Message Heading, Paragraph
 
     h3, p {
